FIX: SVG overflow set to visible

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 #nest {
 	width:100%;
 	height:100%;
+    overflow: visible;
 }
 
 .guideline {
